# XCreator

./: .gitattributes  .gitmodules  CMakeLists.txt  GitNotes.txt  InstallNotes.txt  README.md  newXProject  setup  setup.sh  setupQtEditor
XDeploy/: HowTo.txt  XTextEdit.deb
XDeploy/XTextEdit/DEBIAN/: control  postinst  preinst
XDeploy/XTextEdit/usr/local/share/XTextEdit/: XTextEdit
XDeploy/XTextEdit/usr/share/applications/: XTextEdit.desktop
XDesignerDialog/: CMakeLists.txt  UsageNotes.txt  XMainWindow.h
XDrawOpenGLPrimitives/: CMakeLists.txt  CMakeLists.txt.user.b2b8fff  XMainWindow.h  XOpenGL3PSurface.h  XOpenGL4PSurface.h  XOpenGLArc.h  XOpenGLCircle.h  XOpenGLLine.h  XOpenGLPoint.h  XOpenGLPrimitive.h
XFileOpenDialog/: CMakeLists.txt  XMainWindow.h  main.cpp
XGridLayout/: CMakeLists.txt  XGridLayout.h  XMainWindow.h  main.cpp
XHorizontalSplitterDialog/: CMakeLists.txt  CMakeLists.txt.user.b2b8fff  XLayout.h  XMainWindow.h  howItsDoneNotes.txt
XLcncClientServer/: CMakeLists.txt  HowItsDoneNotes.txt  linuxCncPatchNotes.txt
XLcncClientServer/XBind/: CMakeLists.txt  test.py
XLcncClientServer/XBind/patch/: glcanon.py  skynet.py
XLcncClientServer/XClient/: CMakeLists.txt  XBind.cpp  XClient.cpp  XClient.h
XLcncClientServer/XClient/patch/: axis  skynet.py
XLcncClientServer/XServer/: CMakeLists.txt  XMainWindow.h  XPixmap.h  XServer.h  XTextureStream.h  main.cpp
XLinuxCnc/: CMakeLists.txt  XDialog.h  XLinuxCnc.h  XMainWindow.h
XOpenCascadeDialog/: CMakeLists.txt  GlfwOcctView.cpp  GlfwOcctView.h  GlfwOcctWindow.cpp  GlfwOcctWindow.h  XMainWindow.h  XOpencascade.h  main.cpp  setup
XOpenCascadeTexture/: CMakeLists.txt  XConnection.cpp  XConnection.h  XDialog.h  XMainWindow.h  XOpencascade.h  XTexture.h  main.cpp
XSingleButtonDialog/: CMakeLists.txt  XMainWindow.h
XSocket/: CMakeLists.txt  XChatEditor.h  XClient.h  XMainWindow.h  XServer.h
XTerminal/: CMakeLists.txt  XMainWindow.h  XTerminal.h
XTextEdit/: CMakeLists.txt  DeployNotes.txt  ToDoNotes.txt  XMainWindow.h  main.cpp
XTextEditorDialog/: CMakeLists.txt  CMakeLists.txt.user.b2b8fff  XMainWindow.h
XTinyDialogs/: CMakeLists.txt  XImageButtonArray.h  XImageButtonCheckList.h  XImageButtonColor.h  XImageButtonFileOpen.h  XImageButtonInputBox.h  XImageButtonMessage.h  XImageButtonSaveFile.h  XMainWindow.h
XWindowNoBorder/: CMakeLists.txt  main.cpp
