cmake_minimum_required (VERSION 3.5)
project(XCreator)

add_subdirectory(XDesignerDialog)
add_subdirectory(XDrawOpenGLPrimitives)
add_subdirectory(XGridLayout)
add_subdirectory(XHorizontalSplitterDialog)
add_subdirectory(XLcncClientServer)
add_subdirectory(XOpenCascadeTexture)
add_subdirectory(XSingleButtonDialog)
add_subdirectory(XSocket)
add_subdirectory(XTerminal)
add_subdirectory(XTextEdit)
add_subdirectory(XTextEditorDialog)
add_subdirectory(XTinyDialogs)
add_subdirectory(XWindowNoBorder)



